tests/NormalTests/paczka1/small_fuzzy/49209456.err
Error in line 3: 3i8Zid7rr9 A845 5,1
Error in line 4: 3i8Zid7rr9 S828 76,0
Error in line 5: TkCE2KzG S29 38,9
